CP:0 Added possible moves for pawns